<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/divertsybg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.divertsy.hid.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/button_row_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <!--
            Number for the Scale weight is below
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:gravity="center"
                android:text="@string/weight"
                android:textSize="100sp" />

            <TextView
                android:id="@+id/weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:text="@string/weight_unit_default"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:padding="16dp"
            android:text="@string/btn_zero"
            android:textColor="#FFFFFF"
            app:backgroundTint="#bcaaa4" />

    </LinearLayout>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        tools:text="http://HOSTNAME/Floor/Location"/>
</FrameLayout>